* Renamed $txt['board_topics_*'] to $txt['topics_*'] to harmonize with posts and redirects, grouped them together, and fixed the few occurrences of $txt['board_topics'] that weren't converted yet. Also removed the ucfirst on processed Posts, Topics and Redirects, since they're guaranteed to have a number before them. (SSI.php, BoardIndex.template.php, MessageIndex.template.php, index.language.php) ! add_js() was using a wrong restarter CDATA, oops. (Subs-Cache.php) * Some tweaks to the user box. (sections.css) * First topic post now sports a slightly larger font to differentiate it from the rest. Best used in blog posts. (sections.css) * Testing other fonts for topic posts. Readability is vital here, and Arial 14px, as cool as it is in the UI, may not be the most suitable for posts. (index.css)

--- a/Themes/default/skins/sections.css
+++ b/Themes/default/skins/sections.css
@@ -302,6 +302,7 @@ img.new_posts
 		padding: 0
 		margin: 0 1em 0 1.5em
 		line-height: 1.2em
+		font-size: 90%
 
 	h4
 		margin: .2em 0 .2em 1.1em
@@ -321,6 +322,9 @@ img.new_posts
 
 	li.stars, li.avatar, li.blurb, li.postcount, li.im_icons ul
 		margin-top: .5em
+
+	li.blurb
+		color: #888
 
 	li.avatar
 		overflow: hidden
@@ -348,10 +352,11 @@ img.new_posts
 
 // Posts and personal messages displayed throughout the forum.
 .post, .personalmessage
-	font-family: $post_font
-	line-height: 130%
+	font: $post_font
 	padding: .1em 0
 	clear: right
+	.first-post &
+		font-size: 110%
 
 // The user menu in the post display.
 .usermenu, .acmenu
